# teleprint-me

./: .flake8  .flaskenv  .gitignore  .gitmodules  .prettierrc  .travis.yml  LICENSE.md  README.md  index.html  main.py  pyproject.toml  requirements.txt  run.sh  schema.sql  setup.py  setup.sh
docs/: index.md
docs/articles/: teach-yourself-programming-in-ten-years.md
docs/blog/: teach-yourself-programming-in-ten-years.md
docs/technical/: alt-model-file-format-specification.md  digital-differential-analyzer-algorithm.md  modular-arithmetic-in-lehmer-rng.md  quantization-for-large-language-models.md  quantization-modeling.md
docs/views/: index.md  links.md
ledger/: __init__.py  accounts.py  assets.py  auth.py  forms.py  index.py  portfolio.py  proxy.py
ledger/api/: factory.py
ledger/blueprints/: accounts.py  assets.py  auth.py  portfolio.py  proxy.py
ledger/client/: coinbasepro.py  factory.py  kraken.py
ledger/core/: __init__.py  config.py  extensions.py  generate.py  security.py
ledger/exchange/: factory.py
ledger/forms/: accounts.py  assets.py  auth.py
ledger/templates/: base.html  index.html  license.html  menu.html  navbar.html  portfolio.html  settings.html
sh/: generate.sh
static/components/: router.mjs
static/modules/: app.mjs  async-request.mjs  gallery.js  hash-router.mjs  main.mjs  register.mjs  router-observer.mjs  theme.mjs
static/styles/: contact.css  container.css  gallery.css  main.css  media.css  menu.css  root.css  router.css  style.css  table.css
static/templates/: gif.html  main.html  mathjax.html  project.html  router.html  video.html
teleprint_me/: __init__.py  run.py  scan.py  static.py
tests/: __init__.py
(+139 files in other folders)
