[tool.poetry]
name = "teleprint-me"
version = "0.1.0"
description = "My personal home page and public portfolio"
authors = ["Austin Berrio"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "teleprint_me"}]

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.25"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]
bpython = "^0.24"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
