[tool.poetry]
name = "teleprint-me"
version = "0.1.0"
description = "My personal home page and public portfolio"
authors = ["Austin Berrio"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "teleprint_me"}]

[tool.poetry.dependencies]
python = "^3.10"
WTForms = ">=3.1.0"
email-validator = ">=2.0.0.post2"
flask = ">=2.3.2"
Flask-WTF = ">=1.1.1"

[tool.poetry.dev-dependencies]
bpython = ">=0.24"
black = ">=23.3.0"
flake8 = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
